# capricorn-adk

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  README.md  example_input.txt  pyproject.toml  run_example.py  test_agent.py  test_cli.py  validate_architecture.py
capricorn_adk_agent/: agent.py  models.py  prompt.py  quickstart_eval.evalset.json
capricorn_adk_agent/.adk/eval_history/: capricorn_adk_agent_quickstart_eval_1754693698.707423.evalset_result.json  capricorn_adk_agent_quickstart_eval_1754693698.710449.evalset_result.json  capricorn_adk_agent_quickstart_eval_1754694434.8311.evalset_result.json  capricorn_adk_agent_quickstart_eval_1754694992.02406.evalset_result.json  capricorn_adk_agent_quickstart_eval_1754695825.091711.evalset_result.json  capricorn_adk_agent_quickstart_eval_1754695875.339651.evalset_result.json  capricorn_adk_agent_quickstart_eval_1754696414.391507.evalset_result.json
capricorn_adk_agent/shared_libraries/: __init__.py  callbacks.py  citation_utils.py  parsing_utils.py  quality_tools.py  state_manager.py
capricorn_adk_agent/sub_agents/lit_review/: agent.py  prompt.py
capricorn_adk_agent/sub_agents/paper_analysis/: agent.py  enhanced_prompt.py  prompt.py
capricorn_adk_agent/sub_agents/paper_search/: agent.py  prompt.py
capricorn_adk_agent/sub_agents/parallel_search/: __init__.py  agent.py  fixed_agent.py
capricorn_adk_agent/sub_agents/query_generator/: agent.py  enhanced_prompt.py  prompt.py  query_parser.py
tests/: test_agent_execution.py  test_enhanced_architecture.py
